[package]
name = "crypto-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.26.0", features = ["std"] }
bitcoin = { version = "0.29.2", features = ["rand"] }
bdk = { version = "0.27.1", features = ["rpc", "all-keys"] }
rand = "0.8.5"
dotenv = "0.15.0"